# MeteredRustAPIServer

./: .env  Cargo.toml  README.md
migrations/2023-12-08-175614_create_api_key/: down.sql  up.sql
migrations/2023-12-09-193635_add_account_username_and_password_with_api_key_association/: down.sql  up.sql
src/: main.rs  schema.rs
src/server/: mod.rs  routes.rs
src/server/models/: account.rs  api_key.rs  mod.rs
src/server/repository/: api_key_repository.rs  mod.rs
src/server/service/: account.rs
src/server/web/: account.rs  account_serializers.rs  mod.rs
