[package]
name = "metered_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /opt/homebrew/lib'

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
diesel = {version = "2.1.4", features = ["postgres", "r2d2", "chrono"]}
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"] }
argon2 = "0.5.2"
uuid = { version = "1.6.1", features = ["v4"] }